# marmite

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  args.h  config.c  config.h  look.c  make-palette.c  marmite-app.c  marmite.c  solarized_palette.h  term.c  term.h  unittests.c
t/: 00.t.c  Makefile
